# llvm-cov-easy

./: AGENTS.md  README.md  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
doc/: project.md
lib/: Cargo.toml
lib/benches/: analysis.rs
lib/src/: analysis.rs  format.rs  lib.rs  model.rs
lib/tests/: integration.rs
lib/tests/fixtures/: all-covered.json  summary-only.json  with-branches.json
lib/tests/snapshots/: integration__tests__all_covered.snap  integration__tests__no_test_coverage.snap  integration__tests__real1_all.snap  integration__tests__show_missing_lines.snap  integration__tests__show_missing_lines_complete.snap  integration__tests__show_missing_lines_multi_missing.snap  integration__tests__summary_only_no_segments.snap  integration__tests__with_branches.snap
