[package]
name = "cargo-llvm-cov-easy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
llvm-cov-easy = { version = "0.1.0", path = "../lib" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
