[package]
name = "llvm-cov-easy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true

[[bench]]
name = "analysis"
harness = false
